--- a/src/i18n/pt_br.json
+++ b/src/i18n/pt_br.json
@@ -3,7 +3,7 @@
     "general": {
         "info": "Informações",
         "settings": "Configurações",
-        "events": "Eventos",
+        "tasklogs": "Eventos",
         "start": "Iniciar",
         "pause": "Pausar",
         "none": "Nenhum",
@@ -15,8 +15,8 @@
         "presets_1": "O AutoFarm utiliza predefinições para enviar os ataques, então é preciso que você selecione uma na aba de configurações.",
         "presets_2": "Não é preciso ter a predefinição ativada nas aldeias para funcionar.",
         "presets_3": "Serão usados apenas o número de tropas especificados na predefinição, <strong>oficiais não serão utilizados</strong>.",
-        "presets_4": "É possível alterar a quantidade de tropas na predefinição enquanto o farmador estiver ativado enviando os ataques. Os novos ataques serão enviandos com a nova quantidade especificada.",
-        "presets_5": "É possível utilizar mais de uma predefinição, <strong>desde que tenham o mesmo nome</strong>. O script sempre tentará enviar a primeira da lista, se a aldeia não tiver o mínimo exigido, então irá tentar a próxima.",
+        "presets_4": "É possível alterar a quantidade de tropas na predefinição enquanto o AutoFarm estiver ativado enviando os ataques. Os novos ataques serão enviandos com a nova quantidade especificada.",
+        "presets_5": "É possível utilizar mais de uma predefinição, <strong>desde que tenham o mesmo nome</strong>. O script sempre tentará enviar a primeira da lista. Se a aldeia não possuír o mínimo exigido, então irá tentar a próxima.",
         "ignore": "Ignorando aldeias com grupo",
         "ignore_1": "Você pode selecionar um grupo nas configurações para que todas aldeias atribuidas a esse grupo sejam ignorados pelo AutoFarm. <strong>O grupo serve tanto para os alvos quanto para suas aldeias</strong>.",
         "include": "Incluindo alvos com grupo",
@@ -45,7 +45,7 @@
         "groupInclude": "Incluir alvos do grupo",
         "eventsLimit": "Número máximo de registros"
     },
-    "events": {
+    "tasklogs": {
         "nothingYet": "Nada por aqui ainda...",
         "sendCommand": "{0} ataca {1}",
         "nextVillage": "Alternando para a aldeia {0}",
