Clarificando textos da opção de distância

--- a/src/i18n/en_us.json
+++ b/src/i18n/en_us.json
@@ -35,8 +35,8 @@
         "basicSettings": "Basic Settings",
         "saved": "Settings saved!",
         "save": "Save settings",
-        "maxDistance": "Maximum distance (filds)",
-        "minDistance": "Minimum distance (filds)",
+        "maxDistance": "Targets maximum distance",
+        "minDistance": "Targets minimum distance",
         "maxTravelTime": "Maximum travel time (going)",
         "randomBase": "Random interval base",
         "currentOnly": "Use only the selected village",
