--- a/src/i18n/pt_br.json
+++ b/src/i18n/pt_br.json
@@ -35,8 +35,8 @@
         "basicSettings": "Configurações Básicas",
         "saved": "Configurações salvas!",
         "save": "Salvar configurações",
-        "maxDistance": "Distância máxima (campos)",
-        "minDistance": "Distância mínima (campos)",
+        "maxDistance": "Distância máxima dos alvos",
+        "minDistance": "Distância mínima dos alvos",
         "maxTravelTime": "Tempo máximo de viagem (ida)",
         "randomBase": "Base do intervalo aleatório",
         "currentOnly": "Usar apenas aldeia selecionada",
