--- a/src/i18n/pt_br.json
+++ b/src/i18n/pt_br.json
@@ -38,7 +38,7 @@
         "maxDistance": "Distância máxima dos alvos",
         "minDistance": "Distância mínima dos alvos",
         "maxTravelTime": "Tempo máximo de viagem (ida)",
-        "randomBase": "Base do intervalo aleatório",
+        "randomBase": "Base do intervalo aleatório (segundos)",
         "presetName": "Predefinição das tropas",
         "groupIgnore": "Ignorar aldeias do grupo",
         "groupInclude": "Incluir alvos do grupo",
