.targetList == .targets, JSON reordenado

--- a/src/i18n/en_us.json
+++ b/src/i18n/en_us.json
@@ -1,67 +1,78 @@
-{
+{  
     "title": "Auto Farm",
-    "general": {
-        "info": "Information",
-        "settings": "Settings",
+    "events": {  
+        "attacking": "Attacking.",
+        "commandLimit": "Limit of 50 attacks reached, waiting return.",
+        "lastAttack": "Last attack",
+        "nextVillage": "Changing to village {0}",
+        "noPreset": "No presets have been set.",
+        "noSelectedVillage": "No villages avaliable.",
+        "noUnits": "No units avaliable in village, waiting attacks return.",
+        "noUnitsNoCommands": "No villages has units or commands returning.",
+        "noVillages": "No villages avaliable, waiting attacks return.",
+        "nothingYet": "Nothing available yet...",
+        "paused": "Paused.",
+        "presetFirst": "Set a preset first!",
+        "selectedVillage": "Village selected",
+        "sendCommand": "{0} attack {1}",
+        "status": "Status"
+    },
+    "general": {  
+        "disabled": "Disabled",
         "events": "Task Logs",
-        "start": "Start",
-        "pause": "Pause",
+        "info": "Information",
         "none": "None",
-        "started": "AutoFarm started.",
+        "pause": "Pause",
         "paused": "AutoFarm paused.",
-        "disabled": "Disabled"
+        "settings": "Settings",
+        "start": "Start",
+        "started": "AutoFarm started."
     },
-    "info": {
-        "presets": "Presets Settings",
-        "presets_1": "The AutoFarm use presets to send attacks, you have to select one preset in the selection tab.",
-        "presets_2": "No need to activate the presets in every village.",
-        "presets_3": "Only the units specified in preset will be used, <strong>officers will be ignored</strong>.",
-        "presets_4": "It is possible to change the amount of the troops while the Auto Farm is active.",
-        "presets_5": "It is possible to have more than one preset, <strong>since it has the same name</strong>. The script will send the first preset from the list. If the village dosen't have enough troops, the script will select the next preset.",
-        "ignore": "Ignoring Villages from a group",
-        "ignore_1": "You can select a ignoring group from Presets Settings, all villages that assigned in that group will be ignored by the script. <strong>The group works on targets and your own villages as well</strong>.",
-        "include": "Including targets with a group",
-        "include_1": "As well as ignoring villages, you can include village targets of players. All villages out of maximum distance will be ignored.",
-        "randomBase": "Random interval base",
-        "randomBase_1": "That interval is a random period of time (in seconds) between each attack avoid the script to be detected by the game. <strong>The bigger the better</strong>.",
-        "groupOnly_0": "Using only villages from a group to attack",
-        "groupOnly_1": "You can select a specific group to use only the villages from that group to attack.",
-        "development": "Development",
-        "development_by": "AutoFarm is developed with <span style='color:#ad0202'>❤</span> by",
-        "development_open": "AutoFarm is an <a href='https://github.com/mafrazz/tw2autofarm'>open source</a> software.",
-        "contact": "Contact"
+    "info": {  
+        "development": [  
+            "Development",
+            "AutoFarm is developed with <span style='color:#ad0202'>❤</span> by",
+            "AutoFarm is an <a href='https://github.com/mafrazz/tw2autofarm'>open source</a> software."
+        ],
+        "groupOnly": [  
+            "Using only villages from a group to attack",
+            "You can select a specific group to use only the villages from that group to attack."
+        ],
+        "ignore": [  
+            "Ignoring Villages from a group",
+            "You can select a ignoring group from Presets Settings, all villages that assigned in that group will be ignored by the script. <strong>The group works on targets and your own villages as well</strong>."
+        ],
+        "include": [  
+            "Including targets with a group",
+            "As well as ignoring villages, you can include village targets of players. All villages out of maximum distance will be ignored."
+        ],
+        "presets": [  
+            "Presets Settings",
+            "The AutoFarm use presets to send attacks, you have to select one preset in the selection tab.",
+            "No need to activate the presets in every village.",
+            "Only the units specified in preset will be used, <strong>officers will be ignored</strong>.",
+            "It is possible to change the amount of the troops while the Auto Farm is active.",
+            "It is possible to have more than one preset, <strong>since it has the same name</strong>. The script will send the first preset from the list. If the village dosen't have enough troops, the script will select the next preset."
+        ],
+        "randomBase": [  
+            "Random interval base",
+            "That interval is a random period of time (in seconds) between each attack avoid the script to be detected by the game. <strong>The bigger the better</strong>."
+        ]
     },
-    "settings": {
+    "settings": {  
         "basicSettings": "Basic Settings",
-        "saved": "Settings saved!",
-        "save": "Save settings",
-        "maxDistance": "Targets maximum distance",
-        "minDistance": "Targets minimum distance",
-        "maxTravelTime": "Maximum travel time (going)",
-        "randomBase": "Random interval base (seconds)",
-        "presetName": "Preset of troops",
+        "eventsLimit": "Maximum length of events",
         "groupIgnore": "Ignore villages from group",
         "groupInclude": "Include targets from group",
-        "eventsLimit": "Maximum length of events",
-        "others": "Others",
+        "groupOnly": "Attack only with villages from group",
         "language": "Interface language (require restart)",
-        "groupOnly": "Attack only with villages from group"
-    },
-    "events": {
-        "nothingYet": "Nothing available yet...",
-        "sendCommand": "{0} attack {1}",
-        "nextVillage": "Changing to village {0}",
-        "noUnitsNoCommands": "No villages has units or commands returning.",
-        "noPreset": "No presets have been set.",
-        "presetFirst": "Set a preset first!",
-        "paused": "Paused.",
-        "noVillages": "No villages avaliable, waiting attacks return.",
-        "commandLimit": "Limit of 50 attacks reached, waiting return.",
-        "noUnits": "No units avaliable in village, waiting attacks return.",
-        "status": "Status",
-        "selectedVillage": "Village selected",
-        "lastAttack": "Last attack",
-        "attacking": "Attacking.",
-        "noSelectedVillage": "No villages avaliable."
+        "maxDistance": "Targets maximum distance",
+        "maxTravelTime": "Maximum travel time (going)",
+        "minDistance": "Targets minimum distance",
+        "others": "Others",
+        "presetName": "Preset of troops",
+        "randomBase": "Random interval base (seconds)",
+        "save": "Save settings",
+        "saved": "Settings saved!"
     }
 }
